service.yaml
apiVersion: v1
kind: Service
metadata:
  name: burger-service
spec:
  type: NodePort
  selector:
    app: burger
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
