ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: burger-ingress
spec:
  rules:
  - host: burger.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: burger-service
            port:
              number: 80
